--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -14,22 +14,40 @@
   }
   div.textarea {
 	border:1px solid;
-	width: 80%
+	width: 80%;
+	padding: 5px;
   }
   div.code {
 	border:1px solid;
-	width: 80%
+	width: 80%;
+	padding: 5px;
   }
   div.ext {
   	border: 1px dotted;
   	background-color: #eeeeee;
   	width: 80%;
   }
+  pre.textarea {
+	border:1px solid;
+	width: 80%;
+	padding: 5px;
+  }
+  pre.code {
+    border: 1px solid;
+    width:80%;
+    padding: 5px;
+  }
   .bold {
   	font-weight: bold;
   }
   .notice {
   	color:red;
+  }
+  .comment {
+  	color:red;
+  }
+  .definition {
+  	font-weight: bold;
   }
   .delete {
   	text-decoration:line-through;
