--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,6 +1,7 @@
 @CHARSET "UTF-8";
 
- * {
+/* 字体外观 */
+* {
   	font-size:12px;
   }
   h1 {
@@ -11,6 +12,20 @@
   }
   h3 {
   	font-size:12px;
+  }
+  .bold {
+  	font-weight: bold;
+  }
+  .notice {
+  	color:red;
+  }
+  .delete {
+  	text-decoration:line-through;
+  }
+
+/* 排版 */
+  body > p {
+    text-indent:2em;
   }
   div.textarea {
 	border:1px solid;
@@ -26,6 +41,15 @@
   	border: 1px dotted;
   	background-color: #eeeeee;
   	width: 80%;
+  	padding:5px;
+  }
+  div.ext ul, ol{
+    margin:0;
+    margin-left:2em;
+    padding:0;
+  }
+  div.ext li, p{
+    margin:0;
   }
   pre.textarea {
 	border:1px solid;
@@ -37,21 +61,8 @@
     width:80%;
     padding: 5px;
   }
-  .bold {
-  	font-weight: bold;
-  }
-  .notice {
-  	color:red;
-  }
-  .comment {
-  	color:red;
-  }
-  .definition {
-  	font-weight: bold;
-  }
-  .delete {
-  	text-decoration:line-through;
-  }
+  
+/* 表格 */
   table {
   	border-collapse:collapse;
   }
