--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -29,6 +29,11 @@ dt {
 	color: red;
 }
 
+.comment {
+	!important;
+	color: red;
+}
+
 .delete {
 	text-decoration: line-through;
 }
@@ -97,6 +102,12 @@ pre.code {
 	width: 80%;
 	padding: 5px;
 }
+
+pre.code>code {
+  margin: 0;
+  padding: 0;
+}
+
   /* 无标记列表 */
 ol.none,ul.none {
 	margin: 0;
