--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -39,6 +39,10 @@ dt {
 }
 
 /* 排版 */
+body {
+	min-width: 1000px;
+}
+
 body>p {
 	text-indent: 2em;
 }
@@ -50,11 +54,10 @@ ul, ol, div, pre {
 
   /* 紧临下行 */
 .next {
-	margin-top: 1em;
 	margin-bottom: 0;
 }
-  /* 紧临上行 */
-.last {
+
+.next + * {
 	margin-top: 0;
 }
 
@@ -118,6 +121,13 @@ ol.none,ul.none {
 /* 表格 */
 table {
 	border-collapse: collapse;
+	margin-left: 2em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+caption {
+	font-weight: bold;
 }
 
 table, th, td {
