--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -29,8 +29,7 @@ dt {
 	color: red;
 }
 
-.comment {
-	!important;
+.comment { !important;
 	color: red;
 }
 
@@ -39,15 +38,15 @@ dt {
 }
 
 a.normal {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 table.invisible {
-  border: 0;
+	border: 0;
 }
 
 table.invisible td {
-  border: 0;
+	border: 0;
 }
 
 /* 排版 */
@@ -59,16 +58,16 @@ body>p {
 	text-indent: 2em;
 }
 
-  /* 紧临下行 */
+/* 紧临下行 */
 .next {
 	margin-bottom: 0;
 }
 
-.next + * {
+.next+* {
 	margin-top: 0;
 }
 
-body>div,pre {
+body>div, pre {
 	margin-left: 2em;
 }
 
@@ -124,10 +123,10 @@ pre.code {
 }
 
 pre.code>code {
-  margin: 0;
-  padding: 0;
-  margin-top: -1.5em;
-  margin-bottom: -2.5em;
+	margin: 0;
+	padding: 0;
+	margin-top: -1.5em;
+	margin-bottom: -2.5em;
 }
 
 /* 无标记列表 */
@@ -165,15 +164,16 @@ td {
 }
 
 /* 编号 */
-  /* 有序列表第一级列表项索引为大写罗马数字 */
+/* 有序列表第一级列表项索引为大写罗马数字 */
 div.list>ol>li {
 	list-style-type: upper-roman;
 }
-  /* 有序列表第二级列表项索引为小写罗马数字 */
+/* 有序列表第二级列表项索引为小写罗马数字 */
 div.list>ol>li>ol>li {
 	list-style-type: lower-roman;
 }
-ol.none,ul.none li {
+
+ol.none, ul.none li {
 	list-style-type: none;
 }
 
