--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,152 +1,132 @@
 @CHARSET "UTF-8";
 
-/* 字体外观 */
+/* 1. 字体外观 */
+/* 字号 */
 * {
 	font-size: 12px;
 }
-
 h1 {
 	font-size: 16px;
 }
-
 h2 {
 	font-size: 14px;
 }
 
-h3 {
-	font-size: 12px;
-}
-
-dt {
+dt, .bold {
 	font-weight: bold;
 }
-
-.bold {
-	font-weight: bold;
-}
-
-.notice {
+.notice, .comment {
 	color: red;
 }
-
-.comment { !important;
-	color: red;
-}
-
 .delete {
 	text-decoration: line-through;
 }
 
+/* 无下划线超链接 */
 a.normal {
 	text-decoration: none;
 }
 
+/* 无边框表格 */
 table.invisible {
 	border: 0;
 }
-
 table.invisible td {
 	border: 0;
 }
 
-/* 排版 */
+/* 2. 排版 */
 body {
 	min-width: 1000px;
 }
-
-body>p {
+/* 缩进 */
+p {
 	text-indent: 2em;
 }
-
-body>dl {
-	text-indent: 2em;
+li p {
+	text-indent: 0;
+}
+body>* {
+	margin-left: 2em;
+}
+body>h1, h2, h3, p {
+	margin-left: 0;
 }
 
 /* 紧临下行 */
 .next {
 	margin-bottom: 2px;
 }
-
 .next+* {
 	margin-top: 0;
 }
 
-body>div, pre {
-	margin-left: 2em;
-}
-
+/* 区块：textarea */
 div.textarea {
 	border: 1px solid;
 	width: 90%;
-	padding: 5px;
+	padding-right: 5px;
 }
-
-div.textarea ul {
+div.textarea * {
 	margin: 0;
+}
+div.textarea>* {
 	margin-left: 2em;
-	padding: 0;
 }
-
-div.textarea ol {
+div.textarea>p {
+	margin-left: 0;
+}
+div.textarea>ul {
 	margin: 0;
-	margin-left: 2em;
-	padding: 0;
 }
-
-div.textarea li {
+div.textarea>ol {
 	margin: 0;
 }
 
-div.textarea p {
-	margin: 0;
-}
-
+/* 区块：code */
 div.code {
 	border: 1px solid;
 	width: 90%;
 	padding: 5px;
 }
 
+/* 区块：ext */
 div.ext {
 	border: 1px dotted;
 	background-color: #eeeeee;
 	width: 90%;
-	padding: 5px;
+	padding-right: 5px;
 }
-
-div.ext ul {
+div.ext * {
 	margin: 0;
+}
+div.ext>* {
 	margin-left: 2em;
-	padding: 0;
 }
-
-div.ext ol {
+div.ext>p {
+	margin-left: 0;
+}
+div.ext>ul {
 	margin: 0;
-	margin-left: 2em;
-	padding: 0;
 }
-
-div.ext li {
+div.ext>ol {
 	margin: 0;
 }
 
-div.ext p {
-	margin: 0;
-}
-
+/* 格式化块：textarea */
 pre.textarea {
 	border: 1px solid;
 	width: 90%;
 	padding: 5px;
 }
 
+/* 格式化块：code */
 pre.code {
 	border: 1px solid;
 	width: 90%;
 	padding-left: 10px;
 	padding-bottom: 10px;
 }
-
 pre.code>code {
 	margin: 0;
 	padding: 0;
@@ -159,7 +139,6 @@ ol.none {
 	margin-left: 2em;
 	padding: 0;
 }
-
 ul.none {
 	margin: 0;
 	margin-left: 2em;
@@ -173,33 +152,38 @@ table {
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
-
 caption {
 	font-weight: bold;
 }
-
 table, th, td {
 	border: 1px solid;
-	padding: 5px;
+	padding: 3px;
 }
-
 td {
 	vertical-align: top;
 }
-
-/* 表格中的代码块 */
+td * {
+	margin: 0;
+}
+td ul {
+	padding-left: 2em;
+}
 td>pre {
 	margin: 0;
 	margin-top: -14px;
 	padding: 0;
 }
-
 td>pre>code {
 	margin: 0;
 	padding: 0;
 }
 
-/* 编号 */
+dt {
+	float: left; /* 将 dt, dd 元素置于同一行 */
+	padding-right: 5px;
+}
+
+/* 3. 编号 */
 /* 有序列表第一级列表项索引为大写罗马数字 */
 div.list>ol>li {
 	list-style-type: upper-roman;
