--- a/WebContent/css/print.css
+++ b/WebContent/css/print.css
@@ -12,6 +12,22 @@ p, ul, ol {
 	margin-bottom: 1px;
 }
 
+dt, dd {
+	display: inline-block;
+}
+
+dd {
+	margin-left: 2em;
+}
+
+div.ext>* {
+	margin-left: 5px;
+}
+
+table {
+	min-width: 60%;
+}
+
 /* 导航栏：隐藏 */
 #sideBar {
 	display: none;
